--- a/res/layout/test.xml
+++ b/res/layout/test.xml
@@ -4,36 +4,29 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-
- <ImageView
-        android:id="@+id/img"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
- 
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@android:drawable/picture_frame" />
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/img"
-        android:layout_weight="1"
+        android:layout_marginLeft="28dp"
+        android:layout_toRightOf="@+id/imageView1"
         android:text="TextView" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="播放" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_toRightOf="@+id/img"
         android:text="TextView" />
 
 </RelativeLayout>
