--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -7,7 +7,7 @@
 		android:orientation="vertical" android:gravity="center"
 		android:layout_width="fill_parent" android:layout_height="fill_parent">
 		<ImageView android:id="@+id/spaceshipImage"
-			android:layout_width="wrap_content" android:src="@drawable/logo"
+			android:layout_width="wrap_content" android:src="@drawable/ggg"
 			android:layout_height="wrap_content" />
 	</LinearLayout>
 
