--- a/res/layout/audioplay.xml
+++ b/res/layout/audioplay.xml
@@ -34,11 +34,11 @@
 
 		</RelativeLayout>
 
-		<com.seegle.monitor.MyListView
+		<com.seegle.monitor.sn.MyListView
 		    android:id="@+id/listView1"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content" >
-		</com.seegle.monitor.MyListView>
+		</com.seegle.monitor.sn.MyListView>
 
     </LinearLayout>
 
